workshop03/tiller-myns.yaml
---
kind: Namespace
apiVersion: v1

metadata: 
  name: myns
  labels:
    app: myapp
