workshop03/my-ing-host.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1

metadata: 
  name: myapp-ing-host
  namespace: myns
  labels:
    name: myapp-ing-host
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - path: /
        backend: 
          serviceName: myapp-svc
          servicePort: 80
  - host: fortune.com
    http:
      paths:
      - path: /
        backend: 
          serviceName: fortune-svc
          servicePort: 3000
