workshop03/my-ing.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1

metadata: 
  name: myapp-ing
  namespace: myns
  labels:
    name: myapp-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    
spec:
  rules:
  - http:
      paths:
      - path: /customer(/|$)(.*)
        backend: 
          serviceName: myapp-svc
          servicePort: 80
      - path: /
        backend: 
          serviceName: myapp-svc
          servicePort: 80
